styled the navigation bar

--- a/index.html
+++ b/index.html
@@ -11,31 +11,31 @@
 <body>
     <div class="container">
         <header>
-            <navbar>
-                <div class="nav">
-                    <div class="logo">
-                        <img src="assets/logo.svg" alt="">
-                        <p>MangcodingStore</p>
-                    </div>
-                    <div class="nav-items">
-                        <ul>
-                            <li><a href="#" class="link">Home</a></li>
-                            <li><a href="#" class="link">Course</a></li>
-                            <li><a href="#" class="link">About Us</a></li>
-                            <li><a href="#" class="link">Article</a></li>
-                            <li><a href="#" class="link">Contact</a></li>
-                        </ul>
-                    </div>
-                    <div class="nav-buttons">
-                        <button>Log in</button>
-                        <button>Register</button>
-                    </div>
+            <navbar class="nav flex pd-60">
+
+                <div class="logo flex center-align">
+                    <img src="assets/Logo.svg" alt="">
+                    <p>mangcoding Store</p>
                 </div>
+
+                <ul class="nav-items flex">
+                    <li><a href="#" class="link">Home</a></li>
+                    <li><a href="#" class="link">Course</a></li>
+                    <li><a href="#" class="link">About Us</a></li>
+                    <li><a href="#" class="link">Article</a></li>
+                    <li><a href="#" class="link">Contact</a></li>
+                </ul>
+
+                <div class="nav-buttons flex">
+                    <button class="login">Log in</button>
+                    <button class="register blue-bg">Register</button>
+                </div>
+
             </navbar>
         </header>
 
         <main>
-            <section class="hero-section">
+            <section class="hero-section pd-top pd-60">
                 <div class="text-section">
                     <p>Let’s Begins</p>
                     <h1>Let's Find The Right Course For you</h1>
