eddited and styled statistics -section

--- a/index.html
+++ b/index.html
@@ -77,55 +77,69 @@
                 </div>
             </section>
 
-            <section class="Views-section">
-                <h1>What do You Get From Us</h1>
-                <div class="card">
-                    <div class="card-one">
-                        <div class="icon icon-one"><img src="assets/16.svg" alt=""></div>
-                        <h4>Professional Teacher</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non convallis
-                            molestie.</p>
+            <section class="service-section section-top-pd">
+                <article>
+                    <h1 class="mg-bottom">What do You Get From Us</h1>
+
+                    <div class="card-div flex">
+                        <div class="card card-one blue-bg">
+                            <div class="icon icon-one sub-mg-bottom"><img src="assets/16.svg" alt=""></div>
+                            <h4 class="sub-mg-bottom">Professional Teacher</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non
+                                convallis
+                                molestie.</p>
+                        </div>
+
+                        <div class="card card-two blue-bg">
+                            <div class="icon icon-two sub-mg-bottom"><img src="assets/Group 1702.svg" alt=""></div>
+                            <h4 class="sub-mg-bottom">Course Certificate</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non
+                                convallis
+                                molestie.</p>
+                        </div>
+
+                        <div class="card card-three blue-bg">
+                            <div class="icon icon-three sub-mg-bottom"><img src="assets/37.svg" alt=""></div>
+                            <h4 class="sub-mg-bottom">Course Certificate</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non
+                                convallis
+                                molestie.</p>
+                        </div>
                     </div>
-                    <div class="card-two">
-                        <div class="icon-two"><img src="assets/Group 1702.svg" alt=""></div>
-                        <h4>Course Certificate</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non convallis
-                            molestie.</p>
-                    </div>
-                    <div class="card-three">
-                        <div class="icon-three"><img src="assets/Group 1702.svg" alt=""></div>
-                        <h4>Course Certificate</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non convallis
-                            molestie.</p>
-                    </div>
-                </div>
+                </article>
             </section>
-            <section class="statistics-section">
+
+            <section class="stat-section blue-bg flex section-top-pd">
+
                 <div class="stats-image">
-                    <img src="assets/Group 6.png" alt="">
+                    <img src="assets/Group 1964.png" alt="">
                 </div>
+
                 <div class="stat-text">
-                    <p>SELECTED COURSE</p>
-                    <h1>People Taking Courses</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non convallis
+                    <p class="top sub-mg-bottom ">SELECTED COURSE</p>
+                    <h3 class="sub-mg-bottom">People Taking Courses</h3>
+                    <p class="sub-mg-bottom">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim,
+                        sem
+                        non convallis
                         molestie.</p>
 
-                    <div class="views">
+                    <div class="views flex">
                         <div class="view-one">
-                            <span>6,000</span>
+                            <span class="head">6,000</span>
                             <span>People Views</span>
                         </div>
                         <div class="view-two">
-                            <span>4,000</span>
+                            <span class="head">4,000</span>
                             <span>User</span>
                         </div>
                         <div class="view-three">
-                            <span>100</span>
+                            <span class="head">100</span>
                             <span>Course</span>
                         </div>
                     </div>
                 </div>
             </section>
+
             <section class="courses-section">
                 <div class="course-card card-one">
                     <div class="course-img">
@@ -166,7 +180,7 @@
                 </div>
 
                 <div class="course-card card-three">
-                    <p>AVAILABLE FOR YOU</p>
+                    <p class="top">AVAILABLE FOR YOU</p>
                     <h2>Available Courses</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non convallis
                         molestie.</p>
