--- a/index.html
+++ b/index.html
@@ -41,110 +41,130 @@
 
         <main>
             <section class="hero-section pd-top pd-60 flex pd-bottom ">
-                <div class="text-section">
-                    <p class="mg-bottom blue-txt">Let’s <span class="blue-txt mg-bottom">Begin</span> </p>
-                    <h1 class="mg-bottom">Let's Find The Right <span class="blue-txt mg-bottom">Course </span>For you
-                    </h1>
-                    <p class="content blue-txt mg-bottom "> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Etiam
-                        dignissim, sem non convallis
-                        molestie.
-                    </p>
+                <article>
+                    <div class="text-section">
+                        <p class="mg-bottom blue-txt">Let’s <span class="blue-txt mg-bottom">Begin</span> </p>
+                        <h1 class="mg-bottom">Let's Find The Right <span class="blue-txt mg-bottom">Course </span>For
+                            you
+                        </h1>
+                        <p class="content blue-txt mg-bottom "> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Etiam
+                            dignissim, sem non convallis
+                            molestie.
+                        </p>
 
-                    <div class="herosection-buttons flex">
+                        <div class="herosection-buttons flex">
 
-                        <button class="register">
-                            <strong>Register</strong>
-                        </button>
-
-
-
-                        <button class="play flex">
-                            <div class=" polygon yellow-bg flex">
-                                <img src="assets/Polygon 1.svg" alt="">
-                            </div>
-                            <strong>
-                                Play Video
-                            </strong>
-                        </button>
+                            <button class="register">
+                                <strong>Register</strong>
+                            </button>
 
 
+
+                            <button class="play flex">
+                                <div class=" polygon yellow-bg flex">
+                                    <img src="assets/Polygon 1.svg" alt="">
+                                </div>
+                                <strong>
+                                    Play Video
+                                </strong>
+                            </button>
+
+
+                        </div>
                     </div>
-                </div>
+                </article>
 
-                <div class="image-section">
-                    <img src="assets/Group 6 (2).png" alt="">
-                </div>
+                <article>
+                    <div class="image-section">
+                        <img src="assets/Group 6 (2).png" alt="">
+                    </div>
+                </article>
+
             </section>
 
             <section class="service-section section-top-pd">
-                <article>
-                    <h1 class="mg-bottom">What do You Get From Us</h1>
-
-                    <div class="card-div flex">
+                <h1 class="mg-bottom">What do You Get From Us</h1>
+                <article class="card-div flex">
+                    <article>
                         <div class="card card-one blue-bg">
                             <div class="icon icon-one sub-mg-bottom"><img src="assets/16.svg" alt=""></div>
                             <h4 class="sub-mg-bottom">Professional Teacher</h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non
                                 convallis
-                                molestie.</p>
+                                molestie.
+                            </p>
                         </div>
+                    </article>
 
+                    <article>
                         <div class="card card-two blue-bg">
-                            <div class="icon icon-two sub-mg-bottom"><img src="assets/Group 1702.svg" alt=""></div>
+                            <div class="icon icon-two ">
+                                <img src="assets/Group 1702.svg" alt="">
+                            </div>
                             <h4 class="sub-mg-bottom">Course Certificate</h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non
                                 convallis
-                                molestie.</p>
+                                molestie.
+                            </p>
                         </div>
+                    </article>
 
+                    <article>
                         <div class="card card-three blue-bg">
                             <div class="icon icon-three sub-mg-bottom"><img src="assets/37.svg" alt=""></div>
                             <h4 class="sub-mg-bottom">Course Certificate</h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non
                                 convallis
-                                molestie.</p>
+                                molestie.
+                            </p>
+                        </div>
+                    </article>
+                </article>
+
+            </section>
+
+            <section class="stat-section blue-bg flex section-top-pd">
+                <article>
+                    <div class="stats-image">
+                        <img src="assets/Group 1964.png" alt="">
+                    </div>
+                </article>
+
+                <article>
+
+                    <div class="stat-text">
+                        <p class="top sub-mg-bottom ">SELECTED COURSE</p>
+                        <h3 class="sub-mg-bottom">People Taking Courses</h3>
+                        <p class="sub-mg-bottom">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
+                            dignissim,
+                            sem
+                            non convallis
+                            molestie.</p>
+
+                        <div class="views flex">
+                            <div class="view view-one">
+                                <span class="head">6,000</span>
+                                <span>People Views</span>
+                            </div>
+                            <div class="view view-two">
+                                <span class="head">4,000</span>
+                                <span>User</span>
+                            </div>
+                            <div class="view view-three">
+                                <span class="head">100</span>
+                                <span>Course</span>
+                            </div>
                         </div>
                     </div>
                 </article>
             </section>
 
-            <section class="stat-section blue-bg flex section-top-pd">
-
-                <div class="stats-image">
-                    <img src="assets/Group 1964.png" alt="">
-                </div>
-
-                <div class="stat-text">
-                    <p class="top sub-mg-bottom ">SELECTED COURSE</p>
-                    <h3 class="sub-mg-bottom">People Taking Courses</h3>
-                    <p class="sub-mg-bottom">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim,
-                        sem
-                        non convallis
-                        molestie.</p>
-
-                    <div class="views flex">
-                        <div class="view-one">
-                            <span class="head">6,000</span>
-                            <span>People Views</span>
-                        </div>
-                        <div class="view-two">
-                            <span class="head">4,000</span>
-                            <span>User</span>
-                        </div>
-                        <div class="view-three">
-                            <span class="head">100</span>
-                            <span>Course</span>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
             <section class="courses-section">
-                <div class="course-card card-one">
-                    <div class="course-img">
+                <div class="course-card ">
+                    <div class="course-img card-one">
                         <h4>Best Courses</h4>
-                        <h4>$20 USD</h4>
+                        <h5>$20 USD</h5>
                     </div>
                     <div class="course-txt">
                         <div class="course">
@@ -160,10 +180,10 @@
                     </div>
                 </div>
 
-                <div class="course-card card-two">
-                    <div class="course-img">
+                <div class="course-card ">
+                    <div class="course-img card-two">
                         <h4>Best Courses</h4>
-                        <h4>$20 USD</h4>
+                        <h5>$20 USD</h5>
                     </div>
                     <div class="course-txt">
                         <div class="course">
@@ -187,10 +207,10 @@
                     <button>See all</button>
                 </div>
 
-                <div class="course-card card-four">
-                    <div class="course-img">
+                <div class="course-card ">
+                    <div class="course-img card-four">
                         <h4>Best Courses</h4>
-                        <h4>$20 USD</h4>
+                        <h5>$20 USD</h5>
                     </div>
                     <div class="course-txt">
                         <div class="course">
@@ -206,10 +226,10 @@
                     </div>
                 </div>
 
-                <div class="course-card card-five">
-                    <div class="course-img">
+                <div class="course-card ">
+                    <div class="course-img card-five">
                         <h4>Best Courses</h4>
-                        <h4>$20 USD</h4>
+                        <h5>$20 USD</h5>
                     </div>
                     <div class="course-txt">
                         <div class="course">
@@ -226,7 +246,7 @@
                 </div>
             </section>
 
-            <section class="testimonail-section">
+            <section class="testimonial-section">
                 <h3>Testimonials</h3>
 
                 <div class=" review review-one">
@@ -260,52 +280,57 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum dapibus luctus. “ </p>
                     </div>
                 </div>
-    </div>
-    </section>
-    </main>
 
-    <footer>
-        <div>
-            <div class="footer-logo">
-                <img src="assets/logo.svg" alt="">
-                <p>MangcodingStore</p>
-            </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam mollis, justo nec porttitor auctor, erat
-                sapien faucibus lectus, vel tempor dolor augue et lectus. </p>
-            <div class="socials">
-                <img src="assets/socials/facebook.png" alt="">
-                <img src="assets/socials/twetter.png" alt="">
-                <img src="assets//socials/linkedin.png" alt="">
-                <img src="assets/socials/instagram.png" alt="">
-            </div>
-        </div>
-        <div>
-            <h4>Home</h4>
-            <p>Product</p>
-            <p>Course</p>
-            <p>About Us</p>
-            <p>Login </p>
-        </div>
-        <div>
-            <h4>Courses</h4>
-            <p>HTML & CSS</p>
-            <p>Javascript</p>
-            <p>Photography</p>
-            <p>Deisgn Graphics</p>
+            </section>
+        </main>
 
-        </div>
-        <div>
-            <h4>Articles</h4>
-            <p>New</p>
-            <p>Old</p>
-            <p>Trend</p>
-            <p>Popular</p>
-        </div>
-        <div>
-            <h4>Contact Us</h4>
-            <p>CCdoc123@gmail.com</p>
-        </div>
-    </footer>
+        <footer>
+            <div>
+                <div class="footer-logo">
+                    <img src="assets/logo.svg" alt="">
+                    <p>MangcodingStore</p>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam mollis, justo nec porttitor auctor, erat
+                    sapien faucibus lectus, vel tempor dolor augue et lectus. </p>
+                <div class="socials">
+                    <img src="assets/socials/facebook.png" alt="">
+                    <img src="assets/socials/twetter.png" alt="">
+                    <img src="assets//socials/linkedin.png" alt="">
+                    <img src="assets/socials/instagram.png" alt="">
+                </div>
+            </div>
+
+            <div>
+                <h4>Home</h4>
+                <p>Product</p>
+                <p>Course</p>
+                <p>About Us</p>
+                <p>Login </p>
+            </div>
+
+            <div>
+                <h4>Courses</h4>
+                <p>HTML & CSS</p>
+                <p>Javascript</p>
+                <p>Photography</p>
+                <p>Deisgn Graphics</p>
+
+            </div>
+
+            <div>
+                <h4>Articles</h4>
+                <p>New</p>
+                <p>Old</p>
+                <p>Trend</p>
+                <p>Popular</p>
+            </div>
+
+            <div>
+                <h4>Contact Us</h4>
+                <p>CCdoc123@gmail.com</p>
+            </div>
+
+        </footer>
     </div>
 
 </body>
