eddited and styled the course section

--- a/index.html
+++ b/index.html
@@ -161,125 +161,177 @@
             </section>
 
             <section class="courses-section">
-                <div class="course-card ">
-                    <div class="course-img card-one">
-                        <h4>Best Courses</h4>
-                        <h5>$20 USD</h5>
+                <article class="course">
+                    <div class="course-img course-one">
+                        <div class="best">
+                            <h4>Best Courses</h4>
+                        </div>
+
+                        <div class="amount">
+                            <h5>$20 USD</h5>
+                        </div>
                     </div>
                     <div class="course-txt">
-                        <div class="course">
-                            <h4>HTML & CSS</h4>
-                            <div class="course-details">
+                        <div class="course-details">
+                            <div class="flex course-info">
+                                <div>
+                                    <h4>HTML & CSS</h4>
+                                </div>
+                                <div>
+                                    <p>1500 Views</p>
+                                </div>
+                            </div>
+
+                            <div class="course-details flex view-info">
                                 <span>120 Video</span>
                                 <span>2 Teacher</span>
                             </div>
                         </div>
                         <div class="course-view">
-                            <p>1500 Views</p>
+
                         </div>
                     </div>
-                </div>
+                </article>
 
-                <div class="course-card ">
-                    <div class="course-img card-two">
-                        <h4>Best Courses</h4>
-                        <h5>$20 USD</h5>
+
+                <article class="course ">
+                    <div class="course-img course-two">
+                        <div class="best">
+                            <h4>Best Courses</h4>
+                        </div>
+
+                        <div class="amount">
+                            <h5>$20 USD</h5>
+                        </div>
+
                     </div>
+
                     <div class="course-txt">
-                        <div class="course">
-                            <h4>Photographer</h4>
-                            <div class="course-details">
+                        <div class="course-details">
+                            <div class="flex course-info">
+                                <div>
+                                    <h4>Photographer</h4>
+                                </div>
+                                <div>
+                                    <p>1500 Views</p>
+                                </div>
+                            </div>
+                            <div class="course-details flex view-info">
                                 <span>100 Video</span>
                                 <span>2 Teacher</span>
                             </div>
                         </div>
-                        <div class="course-view">
-                            <p>1500 Views</p>
-                        </div>
                     </div>
-                </div>
+                </article>
 
-                <div class="course-card card-three">
-                    <p class="top">AVAILABLE FOR YOU</p>
-                    <h2>Available Courses</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non convallis
+                <article class="course available">
+                    <p class="available-top">AVAILABLE FOR YOU</p>
+                    <h4>Available Courses</h4>
+                    <p class="txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non
+                        convallis
                         molestie.</p>
                     <button>See all</button>
-                </div>
+                </article>
 
-                <div class="course-card ">
-                    <div class="course-img card-four">
-                        <h4>Best Courses</h4>
-                        <h5>$20 USD</h5>
+                <article class="course">
+                    <div class="course-img course-four">
+                        <div class="best">
+                            <h4>Best Courses</h4>
+                        </div>
+
+                        <div class="amount">
+                            <h5>$20 USD</h5>
+                        </div>
                     </div>
                     <div class="course-txt">
-                        <div class="course">
-                            <h4>JavaScript</h4>
-                            <div class="course-details">
+                        <div class="course-details">
+                            <div class="flex course-info">
+                                <div>
+                                    <h4>JavaScript</h4>
+                                </div>
+                                <div>
+                                    <p>1500 Views</p>
+                                </div>
+                            </div>
+                            <div class="course-details flex view-info">
                                 <span>120 Video</span>
                                 <span>2 Teacher</span>
                             </div>
                         </div>
-                        <div class="course-view">
-                            <p>1500 Views</p>
+                    </div>
+                </article>
+
+                <article class="course">
+                    <div class="course-img course-five">
+                        <div class="best">
+                            <h4>Best Courses</h4>
+                        </div>
+
+                        <div class="amount">
+                            <h5>$20 USD</h5>
                         </div>
                     </div>
-                </div>
 
-                <div class="course-card ">
-                    <div class="course-img card-five">
-                        <h4>Best Courses</h4>
-                        <h5>$20 USD</h5>
-                    </div>
                     <div class="course-txt">
-                        <div class="course">
-                            <h4>Desain Grafis</h4>
-                            <div class="course-details">
+                        <div class="course-details">
+                            <div class="flex course-info">
+                                <div>
+                                    <h4>Desain Grafis</h4>
+                                </div>
+                                <div>
+                                    <p>1500 Views</p>
+                                </div>
+
+
+                            </div>
+                            <div class="course-details flex view-info">
                                 <span>100 Video</span>
                                 <span>2 Teacher</span>
                             </div>
                         </div>
-                        <div class="course-view">
-                            <p>1500 Views</p>
-                        </div>
-                    </div>
-                </div>
+
+                </article>
             </section>
 
             <section class="testimonial-section">
                 <h3>Testimonials</h3>
+                <article>
 
-                <div class=" review review-one">
-                    <div class="top flex">
-                        <div class="image-section">
-                            <img src="images/image2.png" alt="linux">
+                    <div class=" review review-one">
+                        <div class="top flex">
+                            <div class="image-section">
+                                <img src="images/image2.png" alt="linux">
+                            </div>
+                            <div class="title">
+                                <h4>Friskidia</h4>
+                                <p>Client</p>
+                                <img src="assets/unsplash_-RBuQ2PK_L8 (1).png" alt="">
+                            </div>
                         </div>
-                        <div class="title">
-                            <h4>Friskidia</h4>
-                            <p>Client</p>
-                            <img src="assets/unsplash_-RBuQ2PK_L8 (1).png" alt="">
-                        </div>
-                    </div>
-                    <div class="text">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum dapibus luctus. “ </p>
-                    </div>
-                </div>
-
-                <div class=" review review-one">
-                    <div class="top flex">
-                        <div class="image-section">
-                            <img src="assets/unsplash_B4TjXnI0Y2c.png" alt="linux">
-                        </div>
-                        <div class="title">
-                            <h4>Frinkidia</h4>
-                            <p>Cleint</p>
-                            <img src="assets/Shape.svg" alt="">
+                        <div class="text">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum dapibus luctus. “
+                            </p>
                         </div>
                     </div>
-                    <div class="text">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum dapibus luctus. “ </p>
+                </article>
+                <article>
+                    <div class=" review review-two">
+                        <div class="top flex">
+                            <div class="image-section">
+                                <img src="assets/unsplash_B4TjXnI0Y2c.png" alt="linux">
+                            </div>
+                            <div class="title">
+                                <h4>Frinkidia</h4>
+                                <p>Cleint</p>
+                                <img src="assets/Shape.svg" alt="">
+                            </div>
+                        </div>
+                        <div class="text">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum dapibus luctus. “
+                            </p>
+                        </div>
                     </div>
-                </div>
+                </article>
 
             </section>
         </main>
